sa/cloudformation/cf/ec2-cfn.yml
AWSTemplateFormatVersion: 2010-09-09

#

Resources:
  SshSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH/HTTP access from anywhere
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-SshHttpSG
  MyInstance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          InstallAndRun: [Install, Configure]
        Install:
          packages:
            yum:
              httpd: []
          files:
            /var/www/html/index.html:
              content: "<h1>Hello world!</h1>"
        Configure:
          commands:
            startServer:
              command: sudo service httpd start
    CreationPolicy:
      ResourceSignal:
        Timeout: PT5M
    Properties:
      InstanceType: t2.micro
      ImageId: ami-09d95fab7fff3776c
      KeyName: mykey
      UserData:
        Fn::Base64:
          !Sub |
          #!/usr/bin/env bash
          /opt/aws/bin/cfn-init --stack=${AWS::StackName} --resource=MyInstance --region=${AWS::Region} --configsets=InstallAndRun
          /opt/aws/bin/cfn-signal --stack=${AWS::StackName} --resource=MyInstance --region=${AWS::Region}
      SecurityGroupIds:
        - !GetAtt SshSG.GroupId
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-MyInstance
